--- a/3_onderscheid.html
+++ b/3_onderscheid.html
@@ -26,7 +26,7 @@
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
-            <li><a href="1_index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="2_soorten.html">Types</a></li>
             <li><a class="active" href="3_onderscheid.html">Difference</a></li>
             <li><a href="4_oplossing.html">Solution</a></li>
